# movie-sync-api

./: .db_env.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  alembic.ini  database.py  docker-compose.local.yml  docker-compose.yml  gunicorn.conf.py  main.py  protection.py  pyproject.toml  requirements.txt  runserver.py  test.py
alembic/: env.py
alembic/versions/: 2023-04-22_init.py
app/: .env  handlers.py  main.py
app/core/: auth.py  config.py  deps.py  global_variables.py  security.py
app/crud/: app.py  auth.py  command.py  room.py  user.py
app/db/: session.py
app/handlers/: all_handlers.py  app.py  app_ws.py  auth.py  commands.py  commands_ws.py  rooms.py  users.py
app/media/: app.py
app/media/app/: api.py  main.py
app/models/: associations.py  command.py  room.py  user.py
app/schemas/: app.py  command.py  room.py  user.py  validators.py
bot/: api.py  bot.py
media/: app.py
src/: main.py
src/core/: auth.py  config.py  deps.py  global_variables.py  old_auth.py  security.py
src/core/auth/: __init__.py  tokens.py
src/crud/: app.py  auth.py  command.py  room.py  user.py
src/db/: session.py  utils.py
src/domain/: permission.py  room.py  user.py
src/handlers/: all_handlers.py  auth.py  commands.py  commands_ws.py  rooms.py  users.py
src/media/app/: api.py  main.py
src/models/: associations.py  command.py  room.py  user.py
src/schemas/: command.py  room.py  user.py  validators.py
telegram_bot/: .env.example  Dockerfile  api.py  main.py  requirements.txt
