[tool.poetry]
name = "movie-sync-api"
version = "0.1.0"
description = ""
authors = ["dmytromayor <mayor4090@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
fastapi-pagination = "^0.12.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
flake8-pyproject = "^1.2.3"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
