[tool.poetry]
name = "movie-sync-api"
version = "0.1.0"
description = ""
authors = ["dmytromayor <mayor4090@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
fastapi-pagination = "^0.12.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.10"
uvicorn = "^0.21.1"
pymysql = "^1.0.3"
python-multipart = "^0.0.6"
cryptography = "^40.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
flake8-pyproject = "^1.2.3"
pre-commit = "^3.2.2"

[tool.flake8]
ignore = ['F401', 'W503']
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
